--- a/templates/preview_page.html
+++ b/templates/preview_page.html
@@ -43,12 +43,14 @@
         <div class="info-container">
             <label for="dateInput">日付:</label>
             <input type="text" id="dateInput" placeholder="日付を入力">
+            <form method="POST">
+                <label for="title">タイトル:</label>
+                <input type="text" name="title" placeholder="タイトル">
 
-            <label for="titleInput">タイトル:</label>
-            <input type="text" id="titleInput" placeholder="タイトルを入力">
-
-            <label for="memoInput">メモ:</label>
-            <textarea id="memoInput" placeholder="メモを入力" rows="10"></textarea>
+                <label for="memo">メモ:</label>
+                <textarea name="memo" placeholder="メモ" rows="10"></textarea>
+                <input type="submit" value = "登録">
+            </form>
         </div>
     </div>
     <script>
