--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>LOGIN</title>
     <style>
       .login_form_btm {
         position: absolute;
@@ -19,6 +19,13 @@
         transform: translate(-50%,-50%);
         text-align: center;
       }
+      footer{
+            width: 100%;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -39,5 +46,8 @@
         <button type="submit">ログイン</button>
       </div>
     </form>
+    <footer>
+      <p>AITOTO</p>
+    </footer>
 </body>
 </html>
