--- a/templates/list.html
+++ b/templates/list.html
@@ -12,12 +12,15 @@
         td.date{
             text-align: center;
         }
-        footer{
-            width: 100%;
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            text-align: center;
+        td.image img {
+            max-width: 100px;
+            max-height: 100px;
+        }
+        a.go-list {
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
         }
     </style>
 </head>
@@ -29,20 +32,18 @@
             <th>Date</th>
             <th>Title</th>
             <th>Note</th>
+            <th>Image</th>
         </tr>
         {% for post in posts %}
         <tr>
             <td width="13%" class="date">{{ post.date.strftime('%Y-%m-%d %H:%M') }}</td>
             <td width="30%">{{ post.title }}</td>
             <td>{{ post.note }}</td>
-            <img src="../static/up/{{filename}}">
+            <td class="image" colspan="4"><img src="{{ url_for('static', filename='up/' + post.file_path) }}"></td>
         </tr>
         {% endfor %}
     </table>
-    <a href="{{ url_for('login') }}">Upload new file</a>
-    <footer>
-        <p>AITOTO</p>
-    </footer>
+    <a href="{{ url_for('preview') }}" class="go-list">Upload new file</a>
 </body>
 
 </html>
