--- a/templates/preview.html
+++ b/templates/preview.html
@@ -18,16 +18,8 @@
         .preview-container {
             margin-top: 30px;
             display: flex;
-        }
-
-        #previewImage {
-            max-width: 100%;
-            max-height: 400px;
-        }
-
-        .info-container {
-            margin-top: 40px;
-            margin-left: 40px;
+            align-items: center;
+            justify-content: center;
         }
 
         input, textarea {
@@ -35,44 +27,61 @@
             width: 100%;
         }
 
-        footer{
-            width: 100%;
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            text-align: center;
+        input[type="file"] {
+            display: none;
+        }
+
+        img.preview {
+            max-width: 100%;
+            max-height: 200px;
+            margin-bottom: 20px;
+            cursor: pointer;
+            align-items: center;
+        }
+
+        a.go-list {
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
         }
     </style>
 </head>
 
 <body>
     <div class="preview-container">
-        <img src="" alt="プレビュー画像" id="previewImage">
-        <div class="info-container">
             <form method="POST" enctype="multipart/form-data">
                 <label for="title">Title:</label>
                 <input type="text" name="title">
             
                 <label for="memo">Note:</label>
                 <textarea name="note" rows="10"></textarea>
-            
-                <input type="file" name="file" accept="image/*">
-                
+
+                <img src="{{ url_for('static', filename='images/arrow.png') }}" class="preview" onclick="document.getElementById('fileInput').click();">
+                <input type="file" name="file" accept="image/*" id="fileInput">
+                <img src="" id="previewImage" class="preview">
+
                 <input type="submit" value="Resister">
             </form>
-            
-        </div>
+            <a href="{{ url_for('list') }}" class="go-list">Go your list</a>
     </div>
-    <footer>
-        <p>AITOTO</p>
-    </footer>
+
     <script>
         window.onload = function () {
+            var fileInput = document.getElementById('fileInput');
             var previewImage = document.getElementById('previewImage');
-            var previewImageData = sessionStorage.getItem('previewImage');
-            if (previewImageData) {
-                previewImage.src = previewImageData;
-            }
+
+            fileInput.addEventListener('change', function (event) {
+                var file = event.target.files[0];
+
+                if (file) {
+                    var reader = new FileReader();
+                    reader.onload = function (e) {
+                        previewImage.src = e.target.result;
+                    };
+                    reader.readAsDataURL(file);
+                }
+            });
         };
     </script>
 </body>
