ホームからアップロードできない問題を解消（未ログインなら弾くことにも成功）

--- a/templates/list.html
+++ b/templates/list.html
@@ -43,7 +43,8 @@
         </tr>
         {% endfor %}
     </table>
-    <a href="{{ url_for('preview') }}" class="go-list">Upload new file</a>
+    <!-- 最初の画面に戻る -->
+    <a href="{{ url_for('index') }}" class="go-list">Upload new file</a>
 </body>
 
 </html>
