--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,10 @@
             text-align: center;
         }
 
+        .container {
+            margin-top: 150px;
+        }
+
         input[type="file"] {
             display: none;
         }
@@ -160,11 +164,19 @@
     
     <div class="container">
         <div id="upload">
-            <img src="{{ url_for('static', filename='images/arrow.png') }}" class="preview" id="previewImage"
-                onclick="document.getElementById('fileInput').click();">
-            <input type="file" id="fileInput" accept='image/*' onchange="preview(this, 'previewImage');">
-            <h2>ファイルをアップロード</h2>
-            <div class="green-square"></div>
+            {% if current_user.is_authenticated %}
+                <img src="{{ url_for('static', filename='images/arrow.png') }}" class="preview" id="previewImage"
+                    onclick="document.getElementById('fileInput').click();">
+                <input type="file" id="fileInput" accept='image/*' onchange="preview(this, 'previewImage');">
+                <h2>ファイルをアップロード</h2>
+                <div class="green-square"></div>
+            {% else %}
+                <img src="{{ url_for('static', filename='images/arrow.png') }}" class="preview" id="previewImage"
+                    onclick="document.getElementById('fileInput').click();">
+                <input type="file" id="fileInput" accept='image/*' onchange="noLogin(this, 'previewImage');">
+                <h2>ファイルをアップロード</h2>
+                <div class="green-square"></div>
+            {% endif %}
         </div>
         <div class="right">
             <div id="mylist">
