--- a/templates/list.html
+++ b/templates/list.html
@@ -4,9 +4,13 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
      <title>LIST</title>
      <style>
-        table {
+        .title {
+            margin: 30px 100px;
+        }
+        /* table {
             border-collapse: collapse;
         }
         td.date{
@@ -15,19 +19,62 @@
         td.image img {
             max-width: 100px;
             max-height: 100px;
-        }
+        } */
         a.go-list {
             position: fixed;
             bottom: 10px;
             left: 50%;
             transform: translateX(-50%);
         }
+
+        .image {
+            text-align: center;
+        }
+
+        .image img{
+            
+            width: 50%;
+            height: auto;
+            padding: 7%;
+        }
+
+        .card {
+            width: 28%!important;
+            font-size: 1.2rem!important;
+            line-height: 2.3rem!important;
+        }
     </style>
 </head>
 
 <body>
-    <h1>LIST</h1>
-    <table border="1" width="90%">
+    <div class="title">
+        <h1>MyLIST</h1>
+    </div> 
+    <div id="route-list" class="ui centered cards">
+        {% for post in posts %}
+        <div class="card">
+            <div class="content">
+                <div class="header">
+                    <a href="preview_page">{{ post.title }}</a>
+                </div>
+                <div class="meta">
+                    <!-- <span><i class="clock icon"></i> 8分</span> -->
+                    <span><i class="calendar icon"></i> {{ post.date.strftime('%Y-%m-%d %H:%M') }}</span>
+                </div>
+                <div class="memo">
+                    <p>{{ post.note }}</p>
+                </div>
+                <div class="image">
+                    <a href="/preview_page"><img src="{{ url_for('static', filename='up/' + post.file_path) }}"></a>
+                </div>
+                
+                <div class="description"></div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+    <!-- <table border="1" width="90%">
         <tr>
             <th>Date</th>
             <th>Title</th>
@@ -42,9 +89,11 @@
             <td class="image" colspan="4"><img src="{{ url_for('static', filename='up/' + post.file_path) }}"></td>
         </tr>
         {% endfor %}
-    </table>
+    </table> -->
     <!-- 最初の画面に戻る -->
     <a href="{{ url_for('index') }}" class="go-list">Upload new file</a>
 </body>
 
 </html>
+
+
