--- a/templates/list.html
+++ b/templates/list.html
@@ -9,17 +9,9 @@
      <style>
         .title {
             margin: 30px 100px;
-        }
-        /* table {
-            border-collapse: collapse;
-        }
-        td.date{
             text-align: center;
         }
-        td.image img {
-            max-width: 100px;
-            max-height: 100px;
-        } */
+
         a.go-list {
             position: fixed;
             bottom: 10px;
@@ -32,7 +24,6 @@
         }
 
         .image img{
-            
             width: 50%;
             height: auto;
             padding: 7%;
@@ -48,9 +39,9 @@
 
 <body>
     <div class="title">
-        <h1>MyLIST</h1>
-    </div> 
-    <div id="route-list" class="ui centered cards">
+        <h1>MYLIST</h1>
+    </div>
+    <div class="ui centered cards">
         {% for post in posts %}
         <div class="card">
             <div class="content">
@@ -58,7 +49,6 @@
                     <a href="preview_page">{{ post.title }}</a>
                 </div>
                 <div class="meta">
-                    <!-- <span><i class="clock icon"></i> 8分</span> -->
                     <span><i class="calendar icon"></i> {{ post.date.strftime('%Y-%m-%d %H:%M') }}</span>
                 </div>
                 <div class="memo">
@@ -67,31 +57,12 @@
                 <div class="image">
                     <a href="/preview_page"><img src="{{ url_for('static', filename='up/' + post.file_path) }}"></a>
                 </div>
-                
-                <div class="description"></div>
             </div>
         </div>
         {% endfor %}
     </div>
 
-    <!-- <table border="1" width="90%">
-        <tr>
-            <th>Date</th>
-            <th>Title</th>
-            <th>Note</th>
-            <th>Image</th>
-        </tr>
-        {% for post in posts %}
-        <tr>
-            <td width="13%" class="date">{{ post.date.strftime('%Y-%m-%d %H:%M') }}</td>
-            <td width="30%">{{ post.title }}</td>
-            <td>{{ post.note }}</td>
-            <td class="image" colspan="4"><img src="{{ url_for('static', filename='up/' + post.file_path) }}"></td>
-        </tr>
-        {% endfor %}
-    </table> -->
-    <!-- 最初の画面に戻る -->
-    <a href="{{ url_for('index') }}" class="go-list">Upload new file</a>
+    <a href="{{ url_for('preview') }}" class="go-list">新規登録</a>
 </body>
 
 </html>
