--- a/templates/index.html
+++ b/templates/index.html
@@ -14,120 +14,6 @@
             background-color: #f5f5f5;
         }
 
-        #header {
-            margin-top: 30px;
-            width: 100%;
-            position: absolute;
-            left: 0;
-            top: 0;
-            text-align: right;
-        }
-
-        #header ul {
-            display: flex;
-            justify-content: flex-end;
-
-            margin-top: 20px;
-            margin-right: 20px;
-        }
-
-        #header li {
- 
-            margin-right: 20px;
-            list-style: none;
-        }
-
-        .title {
-            margin-top: 100px;
-            text-align: center;
-        }
-
-        .container {
-            margin-top: 150px;
-        }
-
-        input[type="file"] {
-            display: none;
-        }
-
-    
-
-        #upload {
-            position: absolute;
-            top: 50%;
-            left: 25%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-        }   
-
-        img.preview {
-            left: 25%;
-            max-width: 100%;
-            max-height: 150px;
-            margin-bottom: 20px;
-            cursor: pointer;
-        }
-
-        #upload .green-square {
-            width: 550px;
-            height: 400px;
-            background-color: #ffffff;
-            border: 1px solid #08bf02;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: -1;
-        }
-
-        #mylist {
-            position: absolute;
-            top: 35%;
-            left: 75%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-        }
-
-        #mylist p {
-            margin: 20px 0;
-        }
-
-        #mylist .green-square {
-            width: 450px;
-            height: 200px;
-            background-color: #ffffff;
-            border: 1px solid #08bf02;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: -1;
-        }
-
-        #my_reccomend {
-            position: absolute;
-            top: 65%;
-            left: 75%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-        }
-
-        #my_reccomend p {
-            margin: 20px 0;
-        }
-
-        #my_reccomend .green-square {
-            width: 450px;
-            height: 200px;
-            background-color: #ffffff;
-            border: 1px solid #08bf02;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: -1;
-        }
-
         footer {
             width: 100%;
             position: absolute;
@@ -136,9 +22,6 @@
             text-align: center;
         }
 
-        a.go-list {
-            margin-top: 60px;
-        }
     </style>
     <script src="{{ url_for('static', filename='javascript/script.js') }}"></script>
     <title>おもいでノート</title>
@@ -167,45 +50,24 @@
     <div class="container">
         <div id="upload">
             {% if current_user.is_authenticated %}
-                <img src="{{ url_for('static', filename='images/arrow.png') }}" class="preview" id="previewImage"
-                    onclick="document.getElementById('fileInput').click();">
-                <input type="file" id="fileInput" accept='image/*' onchange="preview(this, 'previewImage');">
-                <h2>ファイルをアップロード</h2>
-                <div class="green-square"></div>
+                <a href="/preview_page" class="go-list">
+                    <h2>ファイルをアップロード</h2>
+                </a>
             {% else %}
-                <img src="{{ url_for('static', filename='images/arrow.png') }}" class="preview" id="previewImage"
-                    onclick="document.getElementById('fileInput').click();">
-                <input type="file" id="fileInput" accept='image/*' onchange="noLogin(this, 'previewImage');">
-                <h2>ファイルをアップロード</h2>
-                <div class="green-square"></div>
+                <a href="/login" class="go-list">
+                    <h2>ファイルをアップロード</h2>
+                </a>
             {% endif %}
         </div>
         <div class="right">
             <div id="mylist">
-                <p>マイリスト</p>
-                <!-- 四角が押されたらlist.htmlに遷移 -->
-                <!-- ログイン中なら/list, 未ログインなら/loginに遷移 -->
                 {% if current_user.is_authenticated %}
                     <a href="/list" class="go-list">
-                        <div class="green-square" onclick="window.location.href='/list';"></div>
+                        <h2>マイリスト</h2>
                     </a>
                 {% else %}
                     <a href="/login" class="go-list">
-                        <div class="green-square" onclick="window.location.href='/login';"></div>
-                    </a>
-                {% endif %}
-            </div>
-            <div id="my_reccomend">
-                <p>返礼品おすすめ</p>
-                <!-- 四角が押されたらlist.htmlに遷移 -->
-                <!-- ログイン中なら/list, 未ログインなら/loginに遷移 -->
-                {% if current_user.is_authenticated %}
-                    <a href="/list" class="go-reccomend">
-                        <div class="green-square" onclick="window.location.href='/list';"></div>
-                    </a>
-                {% else %}
-                    <a href="/login" class="go-list">
-                        <div class="green-square" onclick="window.location.href='/login';"></div>
+                        <p>マイリスト</p>
                     </a>
                 {% endif %}
             </div>
