--- a/templates/preview.html
+++ b/templates/preview.html
@@ -67,7 +67,7 @@
             </div>
             <input type="submit" class="register" value="登録">
         </form>
-        <a href="{{ url_for('list') }}" class="go-list">一覧へ</a>
+        <a href="{{ url_for('index') }}" class="go-list">一覧へ</a>
     </div>
 
     <script>
