--- a/templates/index.html
+++ b/templates/index.html
@@ -49,13 +49,13 @@
                         <span>{{ post.date.strftime('%Y-%m-%d %H:%M') }}</span>
                     </div>
                     <div class="header">
-                        <a href="preview_page">{{ post.title }}</a>
+                        <p>{{ post.title }}</p>
                     </div>
                     <div class="memo">
                         <p>{{ post.note }}</p>
                     </div>
                     <div class="image">
-                        <a href="/preview_page"><img src="{{ url_for('static', filename='up/' + post.file_path) }}"></a>
+                        <a href="{{ url_for('edit', id=post.id) }}"><img src="{{ url_for('static', filename='up/' + post.file_path) }}"></a>
                     </div>
                     <div class="return">
                         <a href="">お返しをおすすめしてもらう</a>
