--- a/templates/question.html
+++ b/templates/question.html
@@ -105,7 +105,7 @@
             <textarea id="additionalNotes" name="additionalNotes"></textarea>
             <div class="flex_home">
                 <button type="submit" onclick="submitSurvey()">送信</button>
-                <a href="/">ホームに戻る</a>
+                <a href="/gift_return">おすすめお返し品を見る</a>
             </div>
         </form>
 
