--- a/static/css/style-index.css
+++ b/static/css/style-index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     position: relative;
 }
 
@@ -21,16 +21,18 @@ body {
 /* ヘッダー */
 header {
     padding: 20px 0;
-    background-color: #333;
-    color: #fff;
+    color: #000000;
 }
-.logo {
-    font-size: 50px;
-    font-weight: 700;
-    margin-left: 20px;
+.logo img {
+    width: 350px;
+    height: 250px;
+}
+.menu {
+    font-size: 25px;
+    margin-right: 50px;
 }
 .menu li {
-    margin-left: 40px;
+    margin-left: 50px;
 }
 .menu li a {
     transition: 0.3s;
@@ -42,26 +44,15 @@ header {
 
 /* メイン */
 main {
-    padding-top: 10px;
-    padding-bottom: 30px;
+    padding: 70px 80px;
 }
-
-.info-box{
-    width: 350px;
-    height: 320px;
-    border: 2px solid #030303;
-    /* background-color: #dbdbdb; */
-    text-align: center;
-    margin: 2px;
-    
+.main-figure {
+    width: 500px;
+    height: 250px;
 }
-.image img {
-    max-width: 340px;
-    max-height: 180px;
-    cursor: pointer;
-}
-.content {
-    padding: 30px;
+.phrase {
+    text-align: left;
+    font-size: 40px;
 }
 
 
@@ -72,6 +63,6 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: center;
-    position: absolute;/*←絶対位置*/
-    bottom: 0; /*下に固定*/
+    position: bottom;
+    bottom: 0;
 }
