--- a/templates/gift_return.html
+++ b/templates/gift_return.html
@@ -3,11 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
-    <link rel="stylesheet" href="static/css/style-index.css">
-    <title>おもいでノート</title>
+    <link rel="stylesheet" href="static/css/style-gift_return.css">
+    <title>お返し</title>
 </head>
 
 <body>
@@ -15,16 +14,6 @@
         <a href="" class="logo">
             <img src="../static/images/logo.png">
         </a>
-            <ul class="menu flex">
-                {% if current_user.is_authenticated %}
-                    <li><a href="/preview_page">プレゼント登録</a></li>
-                    <li><a href="/list">マイリスト</a></li>
-                    <li><a href="/logout">ログアウト</a></li>
-                {% else %}
-                    <li><a href="/login">ログイン</a></li>
-                    <li><a href="/register">新規会員登録</a></li>
-                {% endif %}
-            </ul>
     </header>
 
     <main>
